<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:orientation="vertical"
    android:visibility="visible">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_scroll"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:fillViewport="true"
        android:longClickable="true"
        android:measureAllChildren="true"
        android:layout_above="@+id/apply">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_layout"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_text"
                android:id="@+id/ss_text_settings"
                android:textColor="#ff000000"
                android:visibility="visible"
                android:padding="5dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_login_url"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:hint="@string/login_url_hint"
                android:text="@string/login_url_text"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_username"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:hint="@string/username_hint"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/ss_password"
                android:background="@android:drawable/edit_text"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:hint="@string/password_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:id="@+id/ss_text_email"
                android:textColor="#ff000000"
                android:visibility="visible"
                android:padding="5dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_smtp_host"
                android:visibility="visible"
                android:textIsSelectable="true"
                android:singleLine="true"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/smtp_text"
                android:paddingLeft="10dp"
                android:hint="@string/smtp_hint"
                android:inputType="text" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_smtp_port"
                android:paddingLeft="10dp"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:linksClickable="false"
                android:longClickable="false"
                android:textIsSelectable="true"
                android:visibility="visible"
                android:background="@android:drawable/edit_text"
                android:singleLine="true"
                android:hint="@string/port_hint"
                android:text="@string/port_text"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_email_username"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/username_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/ss_email_password"
                android:background="@android:drawable/edit_text"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:hint="@string/password_hint"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_to_email"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/to_email_hint"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_cc_email"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/cc_email_hint"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_text"
                android:id="@+id/ss_text_sms"
                android:textColor="#ff000000"
                android:visibility="visible"
                android:padding="5dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_operator"
                android:visibility="visible"
                android:prompt="@string/mobile_operator"
                android:spinnerMode="dropdown"
                android:entries="@array/mobile_operators"
                android:focusable="true"
                android:background="@android:drawable/edit_text"
                android:focusableInTouchMode="true"
                android:longClickable="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_to_phone"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/to_phone_hint"
                android:inputType="phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ss_cc_phone"
                android:background="@android:drawable/edit_text"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/cc_phone_hint"
                android:inputType="phone" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_text"
        android:id="@+id/apply"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>