<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/events_layout"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_text"
        android:id="@+id/ss_text_event_log"
        android:layout_gravity="center"
        android:textColor="#ff000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="10dp"
        android:layout_weight="0.05" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:weightSum="1"
        android:background="#ffd9d9d9">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row0"
                android:text="@string/event_log_text"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row1"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row2"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row3"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row4"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row5"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row6"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row7"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row8"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:visibility="visible"
            android:background="#ffffffff"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ss_row9"
                android:textColor="#ff000000"
                android:gravity="fill"
                android:paddingLeft="10dp"
                android:singleLine="false" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="0.05">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:text="@string/logout_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:layout_alignBottom="@+id/logout"
            android:text="@string/exit_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>